--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\Abdo\Desktop\Web Development\HTML - Personal Site\circle-cropped.png" alt="Abdo_Salem"></td>
+      <td><img src="https://github.com/Abdo-salem9982/CV/blob/master/circle-cropped.png" alt="Abdo_Salem"></td>
       <td>
         <h1>Abdo Salem</h1>
         <p>
